Componente Item-box, estilo e dados

--- a/app/template/header.html
+++ b/app/template/header.html
@@ -1,6 +1,6 @@
 <a href="/#" class="logo">
-  <span class="logo-mini"><b>P</b>AP</span>
-  <span class="logo-lg"><i class='fa fa-leaf'></i> <b>Primeira</b>APP</span>
+  <span class="logo-mini"><b>Q</b>trk</span>
+  <span class="logo-lg"><i class="fa-solid fa-shoe-prints"></i> <b>Quest</b> Tracker</span>
 </a>
 
 <nav class="navbar navb-static-top">
