--- a/app/template/menu.html
+++ b/app/template/menu.html
@@ -2,7 +2,7 @@
   <ul class="sidebar-menu">
     <li>
       <a ui-sref="dashboard">
-        <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+        <i class="fa-solid fa-id-card"></i> <span>Painel</span>
       </a>
     </li>
 
@@ -14,7 +14,7 @@
 
       <ul class="treeview-menu">
         <li>
-          <a ui-sref="billingCycle"><i class="fa fa-usd"></i> Ciclo de Pagamentos</a>
+          <a ui-sref="gameSave"><i class="fa-solid fa-gamepad"></i> Games</a>
         </li>
       </ul>
     </li>
