--- a/app/template/template-custom.css
+++ b/app/template/template-custom.css
@@ -2,3 +2,5 @@ html { background-color: #ecf0f5; }
 .main-footer {position: fixed; bottom:0px; width:100%;}
 #toastr-container {top: 70px;}
 .table-actions {width:140px;}
+.info-box-icon {width:100%;}
+.widget-user-username {text-align: center;}
