--- a/app/template/template-custom.css
+++ b/app/template/template-custom.css
@@ -2,5 +2,8 @@ html { background-color: #ecf0f5; }
 .main-footer {position: fixed; bottom:0px; width:100%;}
 #toast-container {top: 70px;}
 .table-actions {width:300px;}
+.table-mini-actions {width:150px;}
 .info-box-icon {width:100%;}
-.widget-user-username {text-align: center;}
+.widget-user .widget-user-username {text-align: center; font-size: 20px;}
+.widget-user .widget-user-header {padding-top: 15px; padding-left: 2px; padding-right: 2px; height: 95px;}
+.widget-user .widget-user-image {top: 40px; margin-left: -45px;}
