--- a/app/template/footer.html
+++ b/app/template/footer.html
@@ -1,4 +1,4 @@
 <strong>
-  Copyright &copy; 2017
-  <a href="http://cod3r.com.br" target="_blank">Cod3r</a>
+  Quest Tracker
+  <a href="https://www.visitmama.com/" target="_blank">Downloads</a>
 </strong>
