--- a/app/template/template-custom.css
+++ b/app/template/template-custom.css
@@ -17,3 +17,4 @@ h3 h4 {margin-top: 10px; margin-bottom: 5px;}
 .box {margin-bottom: 5px;}
 .description-block {margin-top: 10px; margin-bottom: 2px;}
 .table>tbody>tr>td {padding: 2px 8px; border-bottom: 1px darkslategray;}
+.free {background-color: lightgreen;}
